<resources>
    <string name="app_name">Mastereasy</string>

    <!-- Authenticator -->
    <string name="account_type" translatable="false">yanovski.master_thesis.account</string>

    <!-- Transition names -->
    <string name="transition_avatar">avatar</string>
    <string name="transition_name">name</string>
    <string name="transition_header">header</string>

    <!-- General -->
    <string name="settings">Настройки</string>
    <string name="add">ДОБАВИ</string>
    <string name="edit">РЕДАКТИРАЙ</string>
    <string name="theses">ТЕМИ</string>
    <string name="send">ИЗПРАТИ</string>
    <string name="register">РЕГИСТРИРАЙ</string>
    <string name="save">ЗАПАЗИ</string>
    <string name="title">Заглавие</string>
    <string name="title_activity_home">Дипломна защита</string>
    <string name="title_activity_profile">Профил</string>
    <string name="title_activity_teachers">Ръководители</string>
    <string name="title_activity_theses">Теми</string>
    <string name="title_activity_calendar">Календар</string>
    <string name="title_activity_new_thesis">Нова тема</string>
    <string name="title_activity_new_event">Ново събитие</string>
    <string name="title_activity_register">Нов акаунт</string>
    <string name="title_activity_students">Студенти</string>
    <string name="title_activity_categories">Категории</string>
    <string name="title_activity_interests">Интереси</string>
    <string name="error_general">Възникна грешка. Моля опитай отновно.</string>

    <!-- Login -->
    <string name="prompt_email">Мейл</string>
    <string name="prompt_password">Парола</string>
    <string name="action_sign_in">Вход</string>
    <string name="action_register">Регистрация</string>
    <string name="error_invalid_email">Невалиден адрес</string>
    <string name="error_invalid_password">Паролата не е достатъчно сложна</string>
    <string name="error_incorrect_password">Грешна парола</string>
    <string name="error_field_required">Полето е задължително</string>
    <string name="contacts_permission_rationale">Искаме да попълним мейла ти</string>
    <string name="denied_permission_text">Винаги можеш да промениш правата за достъп</string>
    <string name="register_as">Регистрирай се като</string>
    <string-array name="types">
        <item>Студент</item>
        <item>Ръководител</item>
    </string-array>

    <!-- Navigation drawer -->
    <string name="navigation_drawer_open">Отвори меню</string>
    <string name="navigation_drawer_close">Затвори меню</string>
    <string name="navigation_exit">Изход</string>

    <!-- Info -->
    <string name="tab_documents">Документи</string>
    <string name="tab_resources">Ресурси</string>
    <string name="tab_internship">Стаж</string>
    <string name="storage_permission_rationale">Съхраняваме изтеглените документи</string>

    <!-- Documents -->
    <string name="doc_assignment">Предложение за възлагане (1 бр.)</string>
    <string name="doc_assignment_description">Предложението за възлагане се приема на Катедрен съвет, който се провежда във Вторник от 13:00 ч. в зала "С" на блок 2. То трябва да бъде прието поне 3 месеца преди датата на дипломната защита.</string>
    <string name="doc_plagiarism">Декларация за липса на плагиатство (1 бр.)</string>
    <string name="doc_defense">Молба за допускане до защита (2 бр.)</string>
    <string name="doc_credits">Справка Кредити: от стая 111, ФМИ (1 бр.)</string>
    <string name="doc_credits_description">Като се представят молба за допускане до защита (2 бр.) и протокол за преддипломен стаж или преддипломен проект</string>
    <string name="doc_assignment_protocol">Протокол за възлагане (2 бр.)</string>
    <string name="doc_assignment_protocol_description">Декларацията за липса на плагиатство, молбата за допускане до защита, справката Кредити и протоколът за възлагане трябва да се представят на ръководителя на дипломната работа или на ръководителя на съответната магистърска програма (ако ръководителят на дипломната работа е хоноруван преподавател) най-късно 20 работни дни преди датата на дипломната защита.</string>
    <string name="doc_thesis">Дипломна работа  (1 бр.)</string>
    <string name="doc_cd">CD (1 бр.)</string>
    <string name="doc_summary">Резюме на български и английски езици (по 1 бр.)</string>

    <!-- Resources -->
    <string name="res_instructions">Инструкции за дипломни работи</string>
    <string name="res_instructions_url">http://dse.fmi.uni-sofia.bg/documents/diploma/diplomni-zashtiti-iziskvania.ppt</string>
    <string name="res_graduates">Дипломирани студенти 2008-2011 г.</string>
    <string name="res_graduates_url">http://dse.fmi.uni-sofia.bg/documents/diploma/Graduated_Students_2008-2011.xls</string>
    <string name="res_review">Бланка за рецензия</string>
    <string name="res_review_url">http://dse.fmi.uni-sofia.bg/documents/diploma/Review.xls</string>
    <string name="res_template">Шаблон за дипломна работа</string>
    <string name="res_template_url">http://dse.fmi.uni-sofia.bg/documents/diploma/template-msc-thesis-dse-2011.doc</string>

    <!-- Internship -->
    <string name="internship_description">Бланката Предложение за стаж се попълва от стажанта и фирмата – възложител и се изпраща по електронна поща до ръководителя на магистърската програма за одобрение. Възможно е да се наложат допълнителни разговори и/или срещи за уточняване на задачите по време на стажа.\n\nСлед одобрение на предложението се пристъпва към работа във съответната фирма за изпълнение на стажа. След приключване на стажа се попълва бланката Оценка на стаж от прекия ръководител на стажанта и се изпраща до по електронна поща до ръководителя на магистърската програма за одобрение. Възможно е да се наложат допълнителни разговори и/или срещи с ръководството на фирмата относно работата на стажанта.\n\nСлед приемане на бланката Оценка за стаж същата се предава подписана от фирмата стая 308 на 2 блок. Въз основа на предадената подписана оценка се нанася в протокол и крайната оценка за стажа, което е задължително условие за допускане до защита на дипломна работа.</string>
    <string name="internship_offer">Предложение за стаж с проект за дипломна работа на студенти</string>
    <string name="internship_offer_url">http://dse.fmi.uni-sofia.bg/documents/internship/SU_FMI_MS_SE-internship_template-2009.doc</string>
    <string name="internship_score">Оценка за стаж с проект за дипломна работа на студенти</string>
    <string name="internship_score_url">http://dse.fmi.uni-sofia.bg/documents/internship/SU_FMI_MS_SE-internship_template-estimation-2009.doc</string>

    <!-- Theses -->
    <string name="ask">ПРАТИ ЗАПИТВАНЕ</string>
    <string name="approve">УДОБРИ</string>
    <string name="decline">ОТКАЖИ</string>
    <string name="expand_content_description">Покажи резюме</string>
    <string name="collapse_content_description">Скрий резюме</string>
    <string name="category_proposals_title">Нови предложения</string>

    <!-- Calendar -->
    <string name="no_events">Няма събития</string>

    <!-- Profile -->
    <string name="send_mail">Изпращане на писмо</string>
    <string name="send_skype_message">Skype разговор</string>

    <!-- New thesis -->
    <string name="description">Резюме</string>
    <string name="select_teacher">Избери ръководител</string>
    <string name="error_select_teacher">Трябва да избереш ръководител</string>
    <string name="select_category">Избери категория</string>

    <!-- New event -->
    <string name="select_date">Избери дата</string>
    <string name="select_recipients">Сподели с</string>
    <string name="error_select_date">Трябва да избереш дата</string>
    <string name="recipients_format">%s студента</string>

    <!-- Edit student profile -->
    <string name="name">Име</string>
    <string name="phone">Телефон</string>
    <string name="email">Поща</string>
    <string name="skype">Skype</string>
    <string name="profile_storage_permission_rationale">Записваме снимките на устройството</string>
    <string name="profile_camera_permission_rationale">Може да направиш нова снимка</string>
    <string name="avatar_chooser">Избери снимка</string>
    <string name="content_description_avatar">Смени аватара си</string>

    <!-- Edit teacher profile -->
    <string name="select_interests">Избери интереси</string>
    <string name="add_interest">Добави интерес</string>
    <string name="interest">Интерес</string>
</resources>
